--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "author": "cesargdm",
   "license": "CC0-1.0",
   "devDependencies": {
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "electron": "^1.4.1",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
+    "json-loader": "^0.5.4",
     "webpack": "^2.2.1",
     "webpack-stream": "^3.2.0"
   },
